kolex wallet dash and token

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -30,6 +30,7 @@ $main-font: 'Jost';
   font-size: 16px;
   color: $white;
 }
+@import "./mixins";
 
 /* -------------------Variables mixin------------------------*/
 
