--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,3 +1,5 @@
 @import "./scss/fonts";
-@import "./scss/variables"
+@import "./scss/base/base";
+@import "./scss/mixins";
+@import "./scss/variables";
 
