--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,7 @@
 $white: #ffffff;
 $main-font: 'Jost';
+$primary-color:#0F215C;
+$secondary-color: #647188;
 
 /* --------------Mixin------------------------*/
 
