--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,8 +1,23 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: $primary-color;
 }
-h1,h2,h3,h4,h5,p,ul,li{
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ul,
+li {
   margin: 0;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px;
+  text-align: left;
 }
