--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -26,14 +26,14 @@ $secondary-color: #647188;
   color: $white;
 }
 @mixin oBtn {
-  border: 2px solid #3d5cc7;
+  border: 2px solid $primary-color;
   border-radius: 16px;
-  width: 100%;
   height: 56px;
+  padding: 8px 26px;
   line-height: 24px;
   font-weight: 500;
   font-size: 16px;
-  color: $white;
+  color: $primary-color;
 }
 @import './mixins';
 
