--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -31,10 +31,9 @@
     padding-bottom: 20px;
     @include scroll();
     &-header {
-      max-width: 100%;
-      min-width: max-content;
       display: grid;
-      grid-template-columns: 50px repeat($cantidad, minmax(210px, 1fr));
+      min-width: 900px;
+      grid-template-columns: 50px repeat($cantidad, 1fr);
       align-items: center;
       padding: 16px;
       border: 1px solid rgba(35, 57, 99, 0.05);
@@ -48,10 +47,10 @@
       }
     }
     &-row {
-      max-width: 100%;
-      min-width: max-content;
       display: grid;
-      grid-template-columns: 50px repeat($cantidad, minmax(210px, 1fr));
+      min-width: 900px;
+      grid-template-columns: 50px repeat($cantidad, 1fr);
+      grid-gap: 20px;
       align-items: center;
       padding: 16px;
       border: 1px solid rgba(35, 57, 99, 0.05);
@@ -63,6 +62,7 @@
       @media (max-width: 800px) {
       }
       p {
+        word-break:break-all;
         font-weight: 300;
         font-size: 13px;
         margin-bottom: 0;
