--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -33,6 +33,7 @@
     &-header {
       display: grid;
       min-width: 900px;
+      grid-gap: 20px;
       grid-template-columns: 50px repeat($cantidad, 1fr);
       align-items: center;
       padding: 16px;
