--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -111,3 +111,13 @@
     }
   }
 }
+.vacio{
+  margin-top: 40px;
+  text-align: center;
+  h5{
+    font-size: 26px;
+    text-align: center;
+    color: #132D7C;
+    margin-top: 20px;
+  }
+}
